--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -14,7 +14,7 @@ layout: page
   <div class="carousel-inner" role="listbox">
 
     <div class="item active">
-      <img src="/assets/images/slide01.jpg" alt="">
+      <img src="{{site.baseurl}}/assets/images/slide01.jpg" alt="">
       <div class="carousel-caption">
         <p>Мы хотим, чтобы дети с аутизмом – наши дети, дети других родителей – обрели свое достойное место в нашем обществе, чтобы общество научилось понимать и принимать детей и взрослых с аутизмом, а аутисты научились понимать и принимать наше общество в той степени, в какой для каждого из них это возможно</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Сделать пожертвование</a></p>
@@ -22,7 +22,7 @@ layout: page
     </div>
 
     <div class="item">
-      <img src="/assets/images/slide01.jpg" alt="">
+      <img src="{{site.baseurl}}/assets/images/slide01.jpg" alt="">
       <div class="carousel-caption">
         <p>Мы мечтаем о том, чтобы каждый особенный ребенок мог раскрыть свой потенциал и стать художником или инженером, менеджером или математиком – или просто человеком, которому интересно и не страшно жить</p>
         <p><a class="btn btn-lg btn-primary" href="#" role="button">Записаться в волонтеры</a></p>
@@ -30,7 +30,7 @@ layout: page
     </div>
 
     <div class="item">
-      <img src="/assets/images/slide01.jpg" alt="">
+      <img src="{{site.baseurl}}/assets/images/slide01.jpg" alt="">
       <div class="carousel-caption">
         <p>Только Алека, найди другую картинку! А то "мечтаем стать художником или инженером"&nbsp;- 
         а на фотке попрошайка с миской...</p>
